[HT-585] Fix padding on left and right of hotline bar on mobile

--- a/health/sass/components/paragraphs/_extends.scss
+++ b/health/sass/components/paragraphs/_extends.scss
@@ -138,6 +138,10 @@
         @extend %band; 
     }
     @include row-and-container;
+
+  .field-name-field-related-contact {
+    @extend .col-sm-12;
+  }
     // display mode
     .view-mode-hotline_bar {
         h2 {
